<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/travel_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="16dp" />

    <TextView
        android:id="@+id/textViewPlanned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/planed_destination"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="8dp" />

    <ListView
        android:id="@+id/listViewPlanned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:choiceMode="multipleChoice"
        android:layout="@layout/item_planned_destination" />

    <EditText
        android:id="@+id/editTextDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_destination" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_image" />

</LinearLayout>