<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_24"
                app:tint="@color/white"
                android:padding="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/registration"
                android:fontFamily="@font/dm_medium"
                android:textColor="@color/white"
                android:textSize="22sp"/>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/title"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="46dp"
        android:fontFamily="@font/dancing_bold"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:background="@drawable/round_border">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_margin="20dp"
            android:hint="@string/username_placeholder"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/icon_color"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/baseline_person_outline_24"
                android:padding="20dp"
                app:drawableTint="@color/app_color"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_margin="20dp"
            android:hint="@string/email_placeholder"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/icon_color"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/baseline_person_outline_24"
                android:padding="20dp"
                app:drawableTint="@color/app_color"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_margin="20dp"
            android:hint="@string/password_placeholder"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/icon_color"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/icon_color"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/baseline_lock_outline_24"
                app:drawableTint="@color/app_color"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:padding="20dp"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/button_color"
            android:padding="20dp"
            android:text="@string/inscrire"
            android:textColor="@color/black"
            android:fontFamily="@font/dm_medium"
            android:textSize="18sp"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/yes_account"
                android:textColor="@color/black"
                android:fontFamily="@font/dm_medium"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/connecte"
                android:textColor="@color/button_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>